tests/baselines/reference/structMemberFunctionOverloadMixingStaticAndInstance_basic.errors.txt
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts(3,12): error TS2388: Function overload must not be static.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts(3,12): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts(8,5): error TS2387: Function overload must be static.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts(8,5): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts(13,12): error TS2388: Function overload must not be static.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts(13,12): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts(18,5): error TS2387: Function overload must be static.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts(18,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/structMemberFunctionOverloadMixingStaticAndInstance_basic.ts (8 errors) ====
    struct C {
        foo();
        static foo(); // error, Function overload must not be static.
               ~~~
!!! error TS2388: Function overload must not be static.
               ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    
    struct D {
        static foo();
        foo(); // error, Function overload must be static.
        ~~~
!!! error TS2387: Function overload must be static.
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    
    struct E<T> {
        foo(x: T);
        static foo(x: number); // error, Function overload must not be static.
               ~~~
!!! error TS2388: Function overload must not be static.
               ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    
    struct F<T> {
        static foo(x: number);
        foo(x: T); // error, Function overload must be static.
        ~~~
!!! error TS2387: Function overload must be static.
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }